typescript/checker/tests/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration13_es2017.ts.stderr
error: Unexpected token Some(Word(await))
 --> $DIR/tests/conformance/async/es2017/functionDeclarations/asyncFunctionDeclaration13_es2017.ts:5:11
  |
5 |    var v: await;
  |           ^^^^^

